test/captureClassicalOpAssign1_2.slq

def main(){
	x:=0;
	def foo(){
		x⊕=1;
		return x;
	}
	return x; /// error
}
